# markPaperAndTable

./: .gitignore  .gitmodules  CMakeLists.txt  design.md  globalresource.cpp  globalresource.h  main.cpp  mptfloatplane.cpp  mptfloatplane.h  mptfloatplane.ui  preview.ui  readme.md
notes/: design.md
program_assets/: recorder.db
program_assets/notes/: design.md  timetest.md
wrapper/include/: wrapper.hpp
wrapper/include/interface_database/: sql_wrapper.hpp
wrapper/include/interface_resource/: text_box.hpp
wrapper/include/widgets/: XHorizontalScrollArea.hpp  XHoverPlane.hpp  XPreview.hpp
wrapper/src/: global_uniforms.cpp  wrapper.cpp
wrapper/src/widgets/: XHoverPlane.cpp  XPreview.cpp
